plugins {
	id 'java'
}

repositories {
	maven {
		url = 'https://repo.runelite.net'
		content {
			includeGroupByRegex("net\\.runelite.*")
		}
	}
	mavenCentral()
}

def runeLiteVersion = 'latest.release'
def pluginMainClass = 'com.runeversus.RuneVersusPluginTest'

dependencies {
	compileOnly group: 'net.runelite', name: 'client', version: runeLiteVersion
	compileOnly 'org.projectlombok:lombok:1.18.30'
	annotationProcessor 'org.projectlombok:lombok:1.18.30'

	testImplementation group: 'net.runelite', name: 'client', version: runeLiteVersion
	testImplementation group: 'net.runelite', name: 'jshell', version: runeLiteVersion
	testImplementation 'junit:junit:4.12'
}

group = 'com.runeversus'

tasks.withType(JavaCompile).configureEach {
	options.encoding = 'UTF-8'
	options.release.set(11)
}

tasks.register('run', JavaExec) {
	classpath = sourceSets.test.runtimeClasspath
	mainClass = pluginMainClass

	jvmArgs "-ea",
		"--add-exports=java.desktop/com.apple.eawt=ALL-UNNAMED",
		"--add-opens=java.base/java.lang.reflect=ALL-UNNAMED"
	args "--developer-mode", "--debug"
}

tasks.register('previewClanProgress', JavaExec) {
	dependsOn testClasses
	classpath = sourceSets.test.runtimeClasspath
	mainClass = 'com.runeversus.ClanProgressCardPreview'
}

tasks.register('previewDuelCard', JavaExec) {
	dependsOn testClasses
	classpath = sourceSets.test.runtimeClasspath
	mainClass = 'com.runeversus.DuelCardPreview'
}

tasks.register('previewClanPanel', JavaExec) {
	dependsOn testClasses
	classpath = sourceSets.test.runtimeClasspath
	mainClass = 'com.runeversus.ClanProgressPanelPreview'
}

tasks.register('previewVersusPanel', JavaExec) {
	dependsOn testClasses
	classpath = sourceSets.test.runtimeClasspath
	mainClass = 'com.runeversus.VersusComparisonPanelPreview'
}

tasks.register('shadowJar', Jar) {
	dependsOn configurations.testRuntimeClasspath
	manifest {
		attributes('Main-Class': pluginMainClass, 'Multi-Release': true)
	}

	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
	from sourceSets.main.output
	from sourceSets.test.output
	from {
		configurations.testRuntimeClasspath.collect { file ->
			file.isDirectory() ? file : zipTree(file)
		}
	}

	exclude 'META-INF/INDEX.LIST'
	exclude 'META-INF/*.SF'
	exclude 'META-INF/*.DSA'
	exclude 'META-INF/*.RSA'
	exclude '**/module-info.class'

	group = BasePlugin.BUILD_GROUP
	archiveClassifier.set('shadow')
	archiveFileName.set("${rootProject.name}-${project.version}-all.jar")
}
